--- a/Mars Data Scraping .ipynb/Mars Data/part_2_mars_weather.ipynb
+++ b/Mars Data Scraping .ipynb/Mars Data/part_2_mars_weather.ipynb
@@ -462,7 +462,9 @@
    "metadata": {},
    "source": [
     "#### Minimum Temperature\n",
-    "YOUR ANALYSIS HERE"
+    "\n",
+    "March = Lowest Temp.  \n",
+    "August = Highest Temp.  "
    ]
   },
   {
@@ -471,7 +473,8 @@
    "metadata": {},
    "source": [
     "#### Atmospheric Pressure\n",
-    "YOUR ANALYSIS HERE"
+    "June = Lowest Atmo Pres.  \n",
+    "Sept = Highest Atmo Pres.  "
    ]
   },
   {
@@ -480,7 +483,7 @@
    "metadata": {},
    "source": [
     "#### Year Length\n",
-    "YOUR ANALYSIS HERE"
+    "1867 Terrestrial days in a Martian year."
    ]
   },
   {
